--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.15",
     "lucide-react": "^0.554.0",
     "mathjs": "^15.1.0",
     "matter-js": "^0.20.0",
+    "ogl": "^1.0.11",
+    "postprocessing": "^6.38.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.181.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
