--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,5 +46,5 @@ jobs:
         # optional but recommended so new deploys show quickly
         uses: aws-actions/aws-cloudfront-invalidate@v1
         with:
-          distribution-id: d3bpu361bxhdro.cloudfront.net
+          distribution-id: E22QULQ9I3PBDI
           paths: "/*"
