--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,10 @@ jobs:
             --cache-control "no-cache,no-store,must-revalidate"
 
       - name: Invalidate CloudFront cache
-        uses: aws-actions/aws-cloudfront-invalidate@v1
+        uses: chetan/invalidate-cloudfront-action@v2
         with:
-          distribution-id: E22QULQ9I3PBDI
+          distribution-id: ${{ secrets.CLOUDFRONT_DIST_ID }}
+          aws-region: ${{ secrets.AWS_REGION }}
           paths: "/*"
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
