--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,14 +37,15 @@ jobs:
             --delete \
             --cache-control "public,max-age=31536000,immutable" \
             --exclude "index.html"
+
           aws s3 cp dist/index.html s3://${{ secrets.S3_BUCKET }}/index.html \
             --cache-control "no-cache,no-store,must-revalidate"
 
       - name: Invalidate CloudFront cache
         uses: chetan/invalidate-cloudfront-action@v2
         with:
-          distribution-id: ${{ secrets.CLOUDFRONT_DIST_ID }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          distribution: ${{ secrets.CLOUDFRONT_DIST_ID }}
           paths: "/*"
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          region: ${{ secrets.AWS_REGION }}
